# windsurf_dev

./: .cursorrules  .gitignore  .ssh  LICENSE  Makefile  README.md  compose.yml  cursor_dev.code-workspace  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
docker/: Dockerfile.cpu  Dockerfile.gpu  compose.cpu.yml  compose.gpu.yml  compose.override.yml
rc/: .bashrc  .tmux.conf  .vimrc
