[tool.poetry]
name = "windsurf project"
version = "0.1.0"
description = "Windsurf 実験用"
authors = ["tkosht <takehito.oshita.business@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

